--- a/frontend/src/Styles/car/sidebar.module.css
+++ b/frontend/src/Styles/car/sidebar.module.css
@@ -1,9 +1,9 @@
 .container {
   width: 100%;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+ 
+ 
   height: 100%;
-  border: 5px solid blue;
+  
  
 
 }
@@ -14,16 +14,30 @@
  margin-top: 20px;
   display: flex;
   justify-content: space-evenly;
-  border: 1px solid greenyellow;
+
  
+}
+.pickup2{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+
 }
 .texttrip {
   background-color: white;
   width: auto;
-  height: 50px;
+  height: auto;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 .texttrip h1 {
+  color: #333333;
+  margin-top: 10px;
+  font-weight: 700;
+  font-size: 18px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.filterh1{
   color: #333333;
   margin-top: 10px;
   font-weight: 700;
@@ -35,4 +49,14 @@
 
 height: auto;
   margin: auto;
+}
+h2{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+
+}
+.filter{
+  margin-top: 30px;
+  background-color: white;
+
 }
