--- a/frontend/src/Styles/car/Car.module.css
+++ b/frontend/src/Styles/car/Car.module.css
@@ -1,43 +1,39 @@
-.carcontainer{
-    width: 80%;
-height: 1000px;
- display: flex;
-    justify-content: space-around;
-    background-color: #E2E2E2;
- margin: auto;
-   }
-.Sidebarcontainer{
-width: 20%;
+.carcontainer {
+  width: 80%;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
+  background-color: #e2e2e2;
+  margin: auto;
+
 }
-.rightcontainer{
-    width: 74%;
-  }
-.Filtercontainer{
-    display: none;
+.Sidebarcontainer {
+  width: 20%;
+}
+.rightcontainer {
+  width: 74%;
+}
+.Filtercontainer {
+  display: none;
 }
 
 @media screen and (max-width: 900px) {
-    .Sidebarcontainer{
-       display: none;
-        }
-        .carcontainer{
-            width: 100%;
-            height: 500px;
-            border: 1px solid red;
-            display: flex;
-            flex-direction: column;
-          
-        }
+  .Sidebarcontainer {
+    display: none;
+  }
+  .carcontainer {
+    width: 100%;
+    height: auto;
 
+    display: flex;
+    flex-direction: column;
+  }
 
-.Filtercontainer{
+  .Filtercontainer {
     display: block;
-}
-        .rightcontainer{
-            width:90%;
-            height: 100%;
-            border: 4px solid black;
-            margin: auto;
-        }
-
+  }
+  .rightcontainer {
+    width: 100%;
+    height: auto;
+  }
 }
