--- a/frontend/src/Styles/car/Right.module.css
+++ b/frontend/src/Styles/car/Right.module.css
@@ -6,15 +6,26 @@
 .textbox{
     width: 100%;
     height: 50px;
-    border: 2px solid green;
+
     background-color: white;
     margin: auto;
 border-radius: 6px;
 }
+
+.textboxinner{
+    height: 35px;
+    width: 100%;
+    align-items: center;
+    margin-top: 7px;
+    margin-left: 5px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
 .alaram{
     width: 100%;
     height: 50px;
-    border: 2px solid #D64F06;
+
     background-color: white;
     margin: auto;
     margin-top: 15px;
@@ -32,7 +43,7 @@ border-radius: 6px;
 
     width: 100%;
     height: 200px;
-    border:1px solid rebeccapurple;
+  
     display: flex;
     justify-content: space-evenly;
 }
@@ -42,9 +53,95 @@ border-radius: 6px;
     height: 50px;
     margin-left: 25%;
     margin-top: 10px;
- 
+
     display: flex;
  justify-content: flex-end;
  justify-content: space-evenly;
     
+    }
+    .maindiv{
+        width: 90%;
+        height: auto;
+        margin: auto;
+        border-bottom: 2px solid black;
+        display: flex;
+        background-color: white;
+    }
+
+
+    .textboxinnerh1{
+        color: #D64F06;
+         font-size: 16px
+   }
+  
+.symbol{
+    font-size: "22px";
+    width: 70%;
+}
+    @media screen and (max-width: 900px) {
+     
+
+        .textboxinner{
+            height: 35px;
+            width: 100%;
+            align-items: center;
+            margin-top: 7px;
+            margin-left: 5px;
+            display: flex;
+            justify-content: space-evenly;
+           
+        }
+        .symboltick{
+            width: 100%;
+      
+            height: 40px;
+            display: flex;
+            background-color: white;
+        }
+        .textboxinnerh1{
+             color: #D64F06;
+              font-size: 12px
+        }
+        .symbol{
+            font-size: "18px";
+            width: 80%;
+        }
+        .fitercontainer{
+         display: none;
+        }
+   
+        .maindiv{
+            width: 100%;
+            height: auto;
+            margin: auto;
+  border-bottom: 2px solid black;
+            display: flex;
+            background-color: white;
+        }
+        .carbox{
+            margin-top: 10px;
+        
+            width: 100%;
+            height: auto;
+
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            grid-template-rows: auto;
+        
+        }
+    }
+
+    @media screen and (max-width: 500px) {
+        .carbox{
+            margin-top: 10px;
+        
+            width: 100%;
+            height: auto;
+     
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-template-rows: auto;
+        
+        }
+
     }
