--- a/frontend/src/Styles/car/box.module.css
+++ b/frontend/src/Styles/car/box.module.css
@@ -4,7 +4,7 @@
     margin: auto; 
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     background-color: white;
-    border: 1px solid black;
+
     border-radius: 5px;
     }
   .text1{
@@ -34,3 +34,33 @@ justify-content: space-evenly;
 }
 /* filtercontainer below */
 
+@media screen and (max-width: 900px) {
+
+  .corboxcon{
+
+ width: 200px;
+    height: 100%;
+    margin: auto; 
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    background-color: white;
+gap: none;
+    border-radius: 5px;
+  }
+
+
+}
+
+
+@media screen and (max-width: 500px) {
+  .corboxcon{
+
+  width: 150px;
+     height: 100%;
+     margin: auto; 
+     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+     background-color: white;
+ gap: none;
+     border-radius: 5px;
+   }
+
+}
