--- a/frontend/src/Styles/car/Right.module.css
+++ b/frontend/src/Styles/car/Right.module.css
@@ -11,7 +11,12 @@
     margin: auto;
 border-radius: 6px;
 }
-
+.Filtercontainer {
+    display: none;
+    width: 100%;
+    height: 50px;
+    border: 1px solid green;
+  }
 .textboxinner{
     height: 35px;
     width: 100%;
@@ -91,6 +96,12 @@ border-radius: 6px;
             justify-content: space-evenly;
            
         }
+        .Filtercontainer {
+            display: block;
+            width: 100%;
+            height: 50px;
+            border: 1px solid green;
+          }
         .symboltick{
             width: 100%;
       
