--- a/frontend/src/Styles/car/Right.module.css
+++ b/frontend/src/Styles/car/Right.module.css
@@ -15,7 +15,7 @@ border-radius: 6px;
     display: none;
     width: 100%;
     height: 50px;
-    border: 1px solid green;
+
   }
 .textboxinner{
     height: 35px;
@@ -98,9 +98,12 @@ border-radius: 6px;
         }
         .Filtercontainer {
             display: block;
-            width: 100%;
+            width: 50%;
             height: 50px;
-            border: 1px solid green;
+            
+            margin: auto;
+            margin-top: 20px;
+           
           }
         .symboltick{
             width: 100%;
